feat: initial commit for coming soon site

--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-    <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
-    <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>VibeCode - Coming Soon</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="stars"></div>
+    <div class="container">
+        <h1>VibeCode</h1>
+        <p>VibeCode is an AI-powered platform that allows you to generate web applications from simple text descriptions. Turn your ideas into reality, no code required.</p>
+        <div class="buttons">
+            <a href="public/whitepaper.html" class="btn btn-primary">Whitepaper</a>
+            <a href="mailto:matty@vibecodes.info" class="btn btn-secondary">Contact Me</a>
+        </div>
+    </div>
+    <footer>
+        <div class="social">
+            <a href="https://www.reddit.com/u/PackieAI/s/TRAu6Iz8vC" target="_blank"><img src="assets/reddit.svg" alt="Reddit"></a>
+            <a href="https://discord.gg/EhWvtaTV" target="_blank"><img src="assets/discord.svg" alt="Discord"></a>
+            <a href="https://www.linkedin.com/in/mattjhagen?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"><img src="assets/linkedin.svg" alt="LinkedIn"></a>
+        </div>
+        <div class="links">
+            <a href="public/terms-of-service.html">Terms of Service</a>
+            <a href="public/privacy-policy.html">Privacy Policy</a>
+        </div>
+    </footer>
+</body>
 </html>
