--- a/public/terms-of-service.html
+++ b/public/terms-of-service.html
@@ -3,10 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service</title>
+    <title>VibeCode - Terms of Service</title>
+    <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Terms of Service</h1>
-    <p>This is a placeholder for the terms of service.</p>
+    <div class="stars"></div>
+    <div class="container article">
+        <h1>Terms of Service</h1>
+        <p>Last updated: July 2, 2025</p>
+        
+        <h2>1. Acceptance of Terms</h2>
+        <p>By accessing or using the VibeCode service, you agree to be bound by these Terms of Service. If you disagree with any part of the terms, you may not access the service.</p>
+
+        <h2>2. Description of Service</h2>
+        <p>VibeCode provides an AI-powered application generation platform. The service is provided on an "AS IS" and "AS AVAILABLE" basis. We reserve the right to modify or discontinue the service at any time without notice.</p>
+
+        <h2>3. User Conduct</h2>
+        <p>You are responsible for all content you generate and all activity that occurs under your account. You agree not to use the service for any illegal or unauthorized purpose.</p>
+
+        <h2>4. Intellectual Property</h2>
+        <p>You retain ownership of the applications you generate. By using the service, you grant VibeCode a license to host, display, and distribute your application on our platform.</p>
+
+        <h2>5. Limitation of Liability</h2>
+        <p>In no event shall VibeCode, nor its directors, employees, partners, agents, suppliers, or affiliates, be liable for any indirect, incidental, special, consequential or punitive damages, including without limitation, loss of profits, data, use, goodwill, or other intangible losses, resulting from your access to or use of or inability to access or use the service.</p>
+        
+        <div class="buttons">
+            <a href="../index.html" class="btn btn-secondary">Back to Home</a>
+        </div>
+    </div>
+    <footer class="article-footer">
+        <div class="social">
+            <a href="https://www.reddit.com/u/PackieAI/s/TRAu6Iz8vC" target="_blank"><img src="../assets/reddit.svg" alt="Reddit"></a>
+            <a href="https://discord.gg/EhWvtaTV" target="_blank"><img src="../assets/discord.svg" alt="Discord"></a>
+            <a href="https://www.linkedin.com/in/mattjhagen?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"><img src="../assets/linkedin.svg" alt="LinkedIn"></a>
+        </div>
+        <div class="links">
+            <a href="./terms-of-service.html">Terms of Service</a>
+            <a href="./privacy-policy.html">Privacy Policy</a>
+        </div>
+    </footer>
 </body>
 </html>
