--- a/public/whitepaper.html
+++ b/public/whitepaper.html
@@ -3,10 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitepaper</title>
+    <title>VibeCode - Whitepaper</title>
+    <link rel="stylesheet" href="../style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Whitepaper</h1>
-    <p>This is a placeholder for the whitepaper.</p>
+    <div class="stars"></div>
+    <div class="container article">
+        <h1>VibeCode Whitepaper</h1>
+        
+        <h2>1. Vision: Democratizing Creation</h2>
+        <p>VibeCode exists to democratize software creation through AI. We believe that great ideas shouldn’t die in notebooks just because someone doesn’t know how to code. Our vision is to build a platform where anyone—from a dreamer in a dorm room to a hustler in a small town—can describe their idea in plain language and watch it become a real, working application instantly.</p>
+
+        <h2>2. The Problem: Friction in Creation</h2>
+        <p>The path from idea to application is filled with friction. It requires technical expertise, significant time, and often, a substantial financial investment. This friction means countless innovative ideas are never realized. VibeCode aims to remove these barriers entirely.</p>
+
+        <h2>3. The Solution: Just Vibes → Value</h2>
+        <p>Think Replit meets ChatGPT, but infused with empathy, accessibility, and a rebellious spirit. VibeCode empowers a new generation of indie founders, creators, and change-makers by offering:</p>
+        <ul>
+            <li><strong>No-Code, AI-Powered Generation:</strong> Describe your app, and our AI builds it.</li>
+            <li><strong>Instant Deployment:</strong> Launch your ideas on a free subdomain in seconds.</li>
+            <li><strong>Serverless Architecture:</strong> Your application is built on a scalable, robust foundation without you needing to manage it.</li>
+            <li><strong>Community-First Collaboration:</strong> (Future) A space to share, fork, and collaborate on AI-generated applications.</li>
+        </ul>
+        <p>We're not just building tools. We're sparking movements. Because the future doesn’t belong to the best coder. It belongs to the boldest builder—and we’re giving them the keys.</p>
+        
+        <div class="buttons">
+            <a href="../index.html" class="btn btn-secondary">Back to Home</a>
+        </div>
+    </div>
+    <footer class="article-footer">
+        <div class="social">
+            <a href="https://www.reddit.com/u/PackieAI/s/TRAu6Iz8vC" target="_blank"><img src="../assets/reddit.svg" alt="Reddit"></a>
+            <a href="https://discord.gg/EhWvtaTV" target="_blank"><img src="../assets/discord.svg" alt="Discord"></a>
+            <a href="https://www.linkedin.com/in/mattjhagen?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"><img src="../assets/linkedin.svg" alt="LinkedIn"></a>
+        </div>
+        <div class="links">
+            <a href="./terms-of-service.html">Terms of Service</a>
+            <a href="./privacy-policy.html">Privacy Policy</a>
+        </div>
+    </footer>
 </body>
 </html>
