fix: enable scrolling on article pages

--- a/public/whitepaper.html
+++ b/public/whitepaper.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="article-page">
     <div class="stars"></div>
     <div class="container article">
         <h1>VibeCode Whitepaper</h1>
