--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -34,14 +34,15 @@
     </div>
     <footer class="article-footer">
         <div class="social">
-            <a href="https://www.reddit.com/u/PackieAI/s/TRAu6Iz8vC" target="_blank"><img src="../assets/reddit.svg" alt="Reddit"></a>
-            <a href="https://discord.gg/EhWvtaTV" target="_blank"><img src="../assets/discord.svg" alt="Discord"></a>
-            <a href="https://www.linkedin.com/in/mattjhagen?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank"><img src="../assets/linkedin.svg" alt="LinkedIn"></a>
+            <a href="https://www.linkedin.com/in/mattjhagen?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" rel="noopener noreferrer"><img src="../assets/linkedin.svg" alt="LinkedIn"></a>
+            <a href="https://www.reddit.com/u/PackieAI/s/hBxmSvCt9R" target="_blank" rel="noopener noreferrer"><img src="../assets/reddit.svg" alt="Reddit"></a>
+            <a href="https://discord.gg/wpde4HSS" target="_blank" rel="noopener noreferrer"><img src="../assets/discord.svg" alt="Discord"></a>
         </div>
         <div class="links">
             <a href="./terms-of-service.html">Terms of Service</a>
             <a href="./privacy-policy.html">Privacy Policy</a>
         </div>
+        <p class="copyright">&copy; 2025 PacMac Mobile LLC</p>
     </footer>
 </body>
 </html>
