feat: add logo and buy me a coffee link

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body class="landing-page">
     <div class="stars"></div>
     <div class="container">
+        <img src="assets/logo.png" alt="VibeCode Logo" class="logo">
         <h1>VibeCode</h1>
         <p>VibeCode is an AI-powered platform that allows you to generate web applications from simple text descriptions. Turn your ideas into reality, no code required.</p>
         <div class="buttons">
@@ -22,6 +23,7 @@
             <a href="https://www.linkedin.com/in/mattjhagen?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" rel="noopener noreferrer"><img src="assets/linkedin.svg" alt="LinkedIn"></a>
             <a href="https://www.reddit.com/u/PackieAI/s/hBxmSvCt9R" target="_blank" rel="noopener noreferrer"><img src="assets/reddit.svg" alt="Reddit"></a>
             <a href="https://discord.gg/wpde4HSS" target="_blank" rel="noopener noreferrer"><img src="assets/discord.svg" alt="Discord"></a>
+            <a href="https://coff.ee/vibecodes" target="_blank" rel="noopener noreferrer"><img src="assets/coffee.svg" alt="Buy Me a Coffee"></a>
         </div>
         <div class="links">
             <a href="public/terms-of-service.html">Terms of Service</a>
