--- a/public/terms-of-service.html
+++ b/public/terms-of-service.html
@@ -37,6 +37,7 @@
             <a href="https://www.linkedin.com/in/mattjhagen?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" rel="noopener noreferrer"><img src="../assets/linkedin.svg" alt="LinkedIn"></a>
             <a href="https://www.reddit.com/u/PackieAI/s/hBxmSvCt9R" target="_blank" rel="noopener noreferrer"><img src="../assets/reddit.svg" alt="Reddit"></a>
             <a href="https://discord.gg/wpde4HSS" target="_blank" rel="noopener noreferrer"><img src="../assets/discord.svg" alt="Discord"></a>
+            <a href="https://coff.ee/vibecodes" target="_blank" rel="noopener noreferrer"><img src="../assets/coffee.svg" alt="Buy Me a Coffee"></a>
         </div>
         <div class="links">
             <a href="./terms-of-service.html">Terms of Service</a>
