--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
-<body class="landing-page">
+<body>
     <div class="stars"></div>
-    <div class="container">
-        <img src="assets/logo.png" alt="VibeCode Logo" class="logo">
-        <h1>VibeCode</h1>
-        <p>VibeCode is an AI-powered platform that allows you to generate web applications from simple text descriptions. Turn your ideas into reality, no code required.</p>
-        <div class="buttons">
-            <a href="public/whitepaper.html" class="btn btn-primary">Whitepaper</a>
-            <a href="mailto:matty@vibecodes.info" class="btn btn-secondary">Contact Me</a>
+    <main>
+        <div class="container">
+            <img src="assets/logo.png" alt="VibeCode Logo" class="logo">
+            <h1>VibeCode</h1>
+            <p>VibeCode is an AI-powered platform that allows you to generate web applications from simple text descriptions. Turn your ideas into reality, no code required.</p>
+            <div class="buttons">
+                <a href="public/whitepaper.html" class="btn btn-primary">Whitepaper</a>
+                <a href="mailto:matty@vibecodes.info" class="btn btn-secondary">Contact Me</a>
+            </div>
         </div>
-    </div>
+    </main>
     <footer>
         <div class="social">
             <a href="https://www.linkedin.com/in/mattjhagen?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" rel="noopener noreferrer"><img src="assets/linkedin.svg" alt="LinkedIn"></a>
