--- a/public/whitepaper.html
+++ b/public/whitepaper.html
@@ -34,7 +34,7 @@
             </div>
         </div>
     </main>
-    <footer class="article-footer">
+    <footer>
         <div class="social">
             <a href="https://www.linkedin.com/in/mattjhagen?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" rel="noopener noreferrer"><img src="../assets/linkedin.svg" alt="LinkedIn"></a>
             <a href="https://www.reddit.com/u/PackieAI/s/hBxmSvCt9R" target="_blank" rel="noopener noreferrer"><img src="../assets/reddit.svg" alt="Reddit"></a>
