Replace Contact Me button with Blog button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>VibeCode is an AI-powered platform that allows you to generate web applications from simple text descriptions. Turn your ideas into reality, no code required.</p>
             <div class="buttons">
                 <a href="public/whitepaper.html" class="btn btn-primary">Whitepaper</a>
-                <a href="mailto:matty@vibecodes.info" class="btn btn-secondary">Contact Me</a>
+                <a href="https://mattjhagen.github.io/blog-static" class="btn btn-secondary">Blog</a>
             </div>
         </div>
     </main>
